--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,21 @@ ul, ul li {
     list-style: none;
 }
 ul {
-    margin: 0;
     -webkit-margin-before: 0;
     -webkit-margin-after: 0;
     -webkit-margin-start: 0;
     -webkit-margin-end: 0;
+    -webkit-padding-start: 0;
+}
+ol {
+    -webkit-padding-start: 20px;
+}
+li ul {
+    -webkit-margin-before: 0;
+    -webkit-margin-after: 0;
+    -webkit-margin-start: 0;
+    -webkit-margin-end: 0;
+    -webkit-padding-start: 40px;
 }
 ol li {
     list-style-type: decimal;
