--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,23 @@
 @font-face {
     font-family: FiraCodeLight;
-    src: url(fonts/FiraCode-Light.woff);
+    src: url(https://graloth.github.io/Phaser-Tutorials/fonts/FiraCode-Light.woff);
 }
 @font-face {
     font-family: FiraCodeMedium;
-    src: url(fonts/FiraCode-Medium.woff);
+    src: url(https://graloth.github.io/Phaser-Tutorials/fonts/FiraCode-Medium.woff);
 }
 @font-face {
     font-family: FiraCode;
-    src: url(fonts/FiraCode-Regular.woff);
+    src: url(https://graloth.github.io/Phaser-Tutorials/fonts/FiraCode-Regular.woff);
 }
 @font-face {
     font-family: FiraCode;
-    src: url(fonts/FiraCode-Bold.woff);
+    src: url(https://graloth.github.io/Phaser-Tutorials/fonts/FiraCode-Bold.woff);
     font-weight: bold;
 }
 @font-face {
     font-family: FiraCodeRetina;
-    src: url(fonts/FiraCode-Retina.woff);
+    src: url(https://graloth.github.io/Phaser-Tutorials/fonts/FiraCode-Retina.woff);
 }
 
 
