--- a/css/main.css
+++ b/css/main.css
@@ -1,36 +1,13 @@
-@font-face {
-    font-family: FiraCodeLight;
-    src: url(https://graloth.github.io/Phaser-Tutorials/fonts/FiraCode-Light.woff);
-}
-@font-face {
-    font-family: FiraCodeMedium;
-    src: url(https://graloth.github.io/Phaser-Tutorials/fonts/FiraCode-Medium.woff);
-}
-@font-face {
-    font-family: FiraCode;
-    src: url(https://graloth.github.io/Phaser-Tutorials/fonts/FiraCode-Regular.woff);
-}
-@font-face {
-    font-family: FiraCode;
-    src: url(https://graloth.github.io/Phaser-Tutorials/fonts/FiraCode-Bold.woff);
-    font-weight: bold;
-}
-@font-face {
-    font-family: FiraCodeRetina;
-    src: url(https://graloth.github.io/Phaser-Tutorials/fonts/FiraCode-Retina.woff);
-}
-
-
 /*---------------------------------------------------------------------------------------------
  *  Copyright (c) Microsoft Corporation. All rights reserved.
  *  Licensed under the MIT License. See License.txt in the project root for license information.
  *--------------------------------------------------------------------------------------------*/
 
 body {
-	font-family: "FiraCodeRegular" , "Segoe WPC", "Segoe UI", "SFUIText-Light", "HelveticaNeue-Light", sans-serif, "Droid Sans Fallback";
+	font-family: "Fira Code" , "Segoe WPC", "Segoe UI", "SFUIText-Light", "HelveticaNeue-Light", sans-serif, "Droid Sans Fallback";
 	font-size: 14px;
 	padding: 0 26px;
-	line-height: 22px;
+	line-height: 1.5em;
 	word-wrap: break-word;
 }
 
@@ -192,7 +169,7 @@ blockquote {
 }
 
 code {
-	font-family: "FiraCodeRegular", Menlo, Monaco, Consolas, "Droid Sans Mono", "Courier New", monospace, "Droid Sans Fallback";
+	font-family: "Fira Code", Menlo, Monaco, Consolas, "Droid Sans Mono", "Courier New", monospace, "Droid Sans Fallback";
 	font-size: 14px;
 	line-height: 19px;
 }
