Updates index style and content

--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@ dl dt {
     list-style:disc outside none;
     display:list-item; 
     -webkit-margin-start: 40px;
+    margin-top: 20px;
 }
 
 dl dd {
